refactor: add in possibility of benching with virtual threads